<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_button"
        android:enabled="true"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/home_nav"
        />
    <item
        android:id="@+id/settings_button"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/settings_nav"/>
    <item
        android:id="@+id/hardware_connection_button"
        android:enabled="true"
        android:icon="@drawable/ic_action_bluetooth_on"
        android:title="@string/hardware_connection_nav"/>
    <item
        android:id="@+id/tutorial_button"
        android:enabled="true"
        android:icon="@drawable/ic_web_asset_24px"

        android:title="@string/guide_nav" />
</menu>